<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">趣Learn</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="img_no">您暂时没有收藏视频</string>
    <string name="desc">desc</string>
    <string name="dev_by">开发者:</string>
    <string name="latest_video">最热门视频</string>
    <string name="all_video">最新视频</string>
    <string name="latest_category">最新分类</string>
    <string name="more_btn">更多</string>
    <string name="network_msg">没有网络连接!!!</string>
    <string name="no_data_found">没有找到数据!!</string>
    <string name="header_title">观看你最喜欢的视频</string>
    <string name="loadmore">加载更多</string>
    <string name="numofitem">10</string>

    <!-- admob id -->
    <string name="admob_publisher_id">ca-app-pub-3940256099942544/</string><!-- your admob id -->
    <string name="admob_intertestial_id">ca-app-pub-3940256099942544/</string><!-- your admob intertestal ad id -->

    <!-- about us -->
    <string name="version">版本</string>
    <string name="author">作者</string>
    <string name="company">公司</string>
    <string name="email">电子邮件</string>
    <string name="website">官方网站</string>
    <string name="contact">联系电话</string>
    <string name="about">关于</string>

    <!--Drawer Menu -->
    <string name="menu_home">首页</string>
    <string name="menu_latest">最新视频</string>
    <string name="menu_category">视频分类</string>
    <string name="menu_favorite">我的收藏</string>
    <string name="menu_about">关于我们</string>
    <string name="menu_share">分享 App</string>
    <string name="menu_rate">评价 App</string>
    <string name="menu_privacy">隐私策略</string>
    <string name="menu_title">其他信息</string>
    <string name="menu_moreapp">更多 App</string>

    <string name="add_favorite_msg">添加到收藏夹</string>
    <string name="remove_favorite_msg">移除到收藏夹</string>

    <!-- play store application link i.e more apps -->
    <string name="play_more_apps000">https://play.google.com/store/apps/developer?id=Vishal+M+Parmar</string>
    <string name="play_more_apps">http://sj.qq.com/myapp/</string>


    <!-- youtube -->
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="youtube_api_key">AIzaSyAYJwy6nzCFqgr5LtihRI3YuVBb_34aprw</string>

</resources>