<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_nav"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center_vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">


                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/header_logo"/>

                <!--</android.support.v7.widget.CardView>-->

                <TextView
                    android:id="@+id/title_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:text="@string/header_title"
                    android:textSize="16sp"/>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#50ffffff"/>
            <LinearLayout
                android:id="@+id/ll_home"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/bg_nav_text_white">

                <ImageView
                    android:id="@+id/imageView_home"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_home"/>

                <TextView
                    android:id="@+id/textView_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/menu_home"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_latest"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                 >

                <ImageView
                    android:id="@+id/imageView_latet"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_latest"/>

                <TextView
                    android:id="@+id/textView_latest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/menu_latest"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_cat"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/imageView_cat"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_category"/>

                <TextView
                    android:id="@+id/textView_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/menu_category"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_fav"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/imageView_fav"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_favorite"/>

                <TextView
                    android:id="@+id/textView_fav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/menu_favorite"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#50ffffff"/>
            <TextView
                android:id="@+id/textView_cc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/menu_title"
                android:textColor="@color/white"
                android:textSize="16sp"/>
            <LinearLayout
                android:id="@+id/ll_ab"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/imageView_ab"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_about"/>

                <TextView
                    android:id="@+id/textView_ab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/menu_about"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_sahre"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/imageView_share"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_share"/>

                <TextView
                    android:id="@+id/textView_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/menu_share"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_more"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/imageView_nore"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_more"/>

                <TextView
                    android:id="@+id/textView_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/menu_moreapp"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_priv"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/imageView_priv"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_privacy"/>

                <TextView
                    android:id="@+id/textView_priv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/menu_privacy"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#50ffffff"/>

    <TextView
        android:id="@+id/textView_developedby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="16sp"
        android:textColor="@color/white"/>

</LinearLayout>